Added value changing for the images (only whole image).

--- a/Invadopodia/View/ImageWindow.xaml
+++ b/Invadopodia/View/ImageWindow.xaml
@@ -1,18 +1,32 @@
-﻿<Window x:Class="Invadopodia.View.ImageWindow"
+﻿<MetroControls:MetroWindow x:Class="Invadopodia.View.ImageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:cmd="http://www.galasoft.ch/mvvmlight"
+        xmlns:MetroControls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:converters="clr-namespace:Invadopodia.Converters"
         DataContext="{Binding Source={StaticResource Locator}, Path=ImageViewModel}"
-        Title="Selected Images" Height="270" Width="700">
+        ShowTitleBar="True"  
+        SaveWindowPosition="True"
+        ResizeMode="CanResizeWithGrip"
+        EnableDWMDropShadow="True"
+        Title="Selected Images" Height="50" Width="800">
+    <!-- 270, 700 -->
 
-    <Window.Resources>
+    <MetroControls:MetroWindow.Resources>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+
             <converters:MouseButtonEventArgsToPointConverter x:Key="MouseButtonEventArgsToPointConverter" />
             <converters:MouseEventArgsToPointConverter x:Key="MouseEventArgsToPointConverter" />
         </ResourceDictionary>
-    </Window.Resources>
+    </MetroControls:MetroWindow.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -21,67 +35,120 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
+            <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        
+
         <ItemsControl Grid.Row="0" Grid.Column="0" ItemsSource="{Binding SelectedImageGroup.Rectangles}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <Canvas MinHeight="260" MinWidth="348" MaxWidth="{Binding SelectedImageGroup.ImageFirst.PixelWidth}" MaxHeight="{Binding SelectedImageGroup.ImageFirst.PixelHeight}" x:Name="canvas" IsItemsHost="True">
-                            <Canvas.Background>
-                                <ImageBrush ImageSource="{Binding SelectedImageGroup.ImageFirst}"/>
-                            </Canvas.Background>
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="MouseDown">
-                                    <cmd:EventToCommand Command="{Binding MouseDownCommand}" EventArgsConverter="{StaticResource MouseButtonEventArgsToPointConverter}" EventArgsConverterParameter="{Binding ElementName=canvas}" PassEventArgsToCommand="True" />
-                                </i:EventTrigger>
-                                <i:EventTrigger EventName="MouseUp">
-                                    <cmd:EventToCommand Command="{Binding MouseUpCommand}" EventArgsConverter="{StaticResource MouseButtonEventArgsToPointConverter}" EventArgsConverterParameter="{Binding ElementName=canvas}" PassEventArgsToCommand="True" />
-                                </i:EventTrigger>
-                                <i:EventTrigger EventName="MouseMove">
-                                    <cmd:EventToCommand Command="{Binding MouseMoveCommand}" EventArgsConverter="{StaticResource MouseEventArgsToPointConverter}" EventArgsConverterParameter="{Binding ElementName=canvas}" PassEventArgsToCommand="True" />
-                                </i:EventTrigger>
-                                <i:EventTrigger EventName="SizeChanged">
-                                    <cmd:EventToCommand Command="{Binding ResizeCanvasCommand}" PassEventArgsToCommand="True" />
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-                        </Canvas>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemContainerStyle>
-                    <Style>
-                        <Setter Property="Canvas.Left" Value="{Binding X}" />
-                        <Setter Property="Canvas.Top" Value="{Binding Y}" />
-                    </Style>
-                </ItemsControl.ItemContainerStyle>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="Pink" BorderThickness="3" Width="{Binding Width}" Height="{Binding Height}" />
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas MinHeight="260" MinWidth="348" MaxWidth="{Binding SelectedImageGroup.ImageFirst.PixelWidth}" MaxHeight="{Binding SelectedImageGroup.ImageFirst.PixelHeight}" x:Name="canvas" IsItemsHost="True">
+                        <Canvas.Background>
+                            <ImageBrush ImageSource="{Binding SelectedImageGroup.ImageFirst}"/>
+                        </Canvas.Background>
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="MouseDown">
+                                <cmd:EventToCommand Command="{Binding MouseDownCommand}" EventArgsConverter="{StaticResource MouseButtonEventArgsToPointConverter}" EventArgsConverterParameter="{Binding ElementName=canvas}" PassEventArgsToCommand="True" />
+                            </i:EventTrigger>
+                            <i:EventTrigger EventName="MouseUp">
+                                <cmd:EventToCommand Command="{Binding MouseUpCommand}" EventArgsConverter="{StaticResource MouseButtonEventArgsToPointConverter}" EventArgsConverterParameter="{Binding ElementName=canvas}" PassEventArgsToCommand="True" />
+                            </i:EventTrigger>
+                            <i:EventTrigger EventName="MouseMove">
+                                <cmd:EventToCommand Command="{Binding MouseMoveCommand}" EventArgsConverter="{StaticResource MouseEventArgsToPointConverter}" EventArgsConverterParameter="{Binding ElementName=canvas}" PassEventArgsToCommand="True" />
+                            </i:EventTrigger>
+                            <i:EventTrigger EventName="SizeChanged">
+                                <cmd:EventToCommand Command="{Binding ResizeCanvasCommand}" PassEventArgsToCommand="True" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Canvas>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemContainerStyle>
+                <Style>
+                    <Setter Property="Canvas.Left" Value="{Binding X}" />
+                    <Setter Property="Canvas.Top" Value="{Binding Y}" />
+                </Style>
+            </ItemsControl.ItemContainerStyle>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Rectangle Fill="Transparent" Stroke="Pink" StrokeThickness="3" Width="{Binding Width}" Height="{Binding Height}" />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
 
         <ItemsControl Grid.Row="0" Grid.Column="1" ItemsSource="{Binding SelectedImageGroup.Rectangles}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <Canvas MinHeight="260" MinWidth="348" MaxWidth="{Binding SelectedImageGroup.ImageSecond.PixelWidth}" MaxHeight="{Binding SelectedImageGroup.ImageSecond.PixelHeight}" IsItemsHost="True">
-                            <Canvas.Background>
-                                <ImageBrush ImageSource="{Binding SelectedImageGroup.ImageSecond}"/>
-                            </Canvas.Background>
-                        </Canvas>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemContainerStyle>
-                    <Style>
-                        <Setter Property="Canvas.Left" Value="{Binding X}" />
-                        <Setter Property="Canvas.Top" Value="{Binding Y}" />
-                    </Style>
-                </ItemsControl.ItemContainerStyle>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="Pink" BorderThickness="3" Width="{Binding Width}" Height="{Binding Height}" />
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas MinHeight="260" MinWidth="348" MaxWidth="{Binding SelectedImageGroup.ImageSecond.PixelWidth}" MaxHeight="{Binding SelectedImageGroup.ImageSecond.PixelHeight}" IsItemsHost="True">
+                        <Canvas.Background>
+                            <ImageBrush ImageSource="{Binding SelectedImageGroup.ImageSecond}"/>
+                        </Canvas.Background>
+                    </Canvas>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemContainerStyle>
+                <Style>
+                    <Setter Property="Canvas.Left" Value="{Binding X}" />
+                    <Setter Property="Canvas.Top" Value="{Binding Y}" />
+                </Style>
+            </ItemsControl.ItemContainerStyle>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="Pink" BorderThickness="3" Width="{Binding Width}" Height="{Binding Height}" />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+        <Grid Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="0">
+                <TextBlock Text="Gamma " />
+                <Slider Minimum="0.1" Maximum="5.0" Value="{Binding GammaValueFirst}" MinWidth="100" />
+                <TextBox Text="{Binding GammaValueFirst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" />
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="1">
+                <TextBlock Text="Contrast " />
+                <Slider Minimum="-127" Maximum="127" Value="{Binding ContrastValueFirst}" MinWidth="100" />
+                <TextBox Text="{Binding ContrastValueFirst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" />
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="2">
+                <TextBlock Text="Brightness " />
+                <Slider Minimum="-255" Maximum="255" Value="{Binding BrightnessValueFirst}" MinWidth="100" />
+                <TextBox Text="{Binding BrightnessValueFirst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" />
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="0">
+                <TextBlock Text="Gamma " />
+                <Slider Minimum="0.1" Maximum="5.0" Value="{Binding GammaValueSecond}" MinWidth="100" />
+                <TextBox Text="{Binding GammaValueSecond, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" />
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="1">
+                <TextBlock Text="Contrast " />
+                <Slider Minimum="-127" Maximum="127" Value="{Binding ContrastValueSecond}" MinWidth="100" />
+                <TextBox Text="{Binding ContrastValueSecond, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" />
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="2">
+                <TextBlock Text="Brightness " />
+                <Slider Minimum="-255" Maximum="255" Value="{Binding BrightnessValueSecond}" MinWidth="100" />
+                <TextBox Text="{Binding BrightnessValueSecond, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" />
+            </StackPanel>
+        </Grid>
 
     </Grid>
-</Window>
+</MetroControls:MetroWindow>
